--- a/index.html
+++ b/index.html
@@ -37,9 +37,9 @@
         
             <p>
                 Quer ajudar para criar uma senha segura? 
-                <span id="generate-password">Clique aqui.</span>
+                <span id="open-generate-password">Clique aqui.</span>
             </p>
-            <div id="generate-options">
+            <div id="generate-options" class="hide">
                 <p>Selecione as opções que você deseja</p>
                 <div class="form-control">
                     <label for="length">Quantidade de caracteres:</label>
@@ -57,6 +57,7 @@
                     <label for="symbols">Símbolos:</label>
                     <input type="checkbox" name="symbols" id="symbols" checked>
                 </div>
+                <button id="generate-password">Criar senha</button>
             </div>
 
             <div id="generated-password"> 
@@ -73,6 +74,6 @@
             <input type="submit" value="Cadastrar">
         </div>
     </div>
-    
+
 </body>
 </html>
